--- a/ormconfig.json
+++ b/ormconfig.json
@@ -2,8 +2,8 @@
    "type": "mysql",
    "host": "localhost",
    "port": 3306,
-   "username": "root",
-   "password": "root",
+   "username": "user",
+   "password": "password",
    "database": "application",
    "insecureAuth": false,
    "synchronize": true,
